--- a/Client/pages/detail/detail.wxss
+++ b/Client/pages/detail/detail.wxss
@@ -1,172 +1,236 @@
-.detail{
+page {
+  background: #f2f2f2;
+  font-family: '微软雅黑';
+}
+
+swiper {
+  width: 660rpx;
+  height: 680rpx;
+  margin: 0 auto;
+  margin-top: 36rpx;
+  border-radius: 6rpx;
+  -webkit-box-shadow: 0 0 15rpx rgba(0, 0, 0, 0.5);
+  background: #fff;
+}
+
+.swiper-item {
+  width: 100%;
   height: 100%;
 }
 
-.detail-post-meta{
-  padding: 30rpx;
+.slide-image {
+  width: 660rpx;
+  height: 660rpx;
+  border-radius: 6rpx;
+}
+
+.add {
+  width: 560rpx;
+  background: #43e5f0;
+  height: 100rpx;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #eee;
-}
-.detail-post-avatar{
-  margin-right: 20rpx;
-}
-
-.detail-post-time{
-  color: #888;
-  font-size: 26rpx;
+  justify-content: center;
+  margin: 0 auto;
+  border-radius: 55rpx;
+  margin-top: 130rpx;
+  -webkit-box-shadow: 0 0 3rpx rgba(0, 0, 0, 0.5);
 }
 
-.detail-post-avatar-img{
-  width: 85rpx;
-  height: 85rpx;
-  border-radius: 50%;
-}
-.detail-post-info{
-  flex: 1;
-}
-
-
-.detail-collect-item{
-  width: 100rpx;
-  height: 55rpx;
-  line-height: 55rpx;
-  text-align: center;
+.add text {
+  font-size: 50rpx;
   color: #fff;
-  background: #80bd01;
-  border-radius: 3rpx;
-  margin-left: 20rpx;
-  cursor: pointer;
-}
-.detail-type-item{
-  display: inline-block;
+  font-weight: 700;
+  padding: 0 20rpx;
 }
 
-.detail-type-item-icon{
-  display: inline-block;
-  vertical-align: middle;
-  width: 40rpx;
-  height: 40rpx;
-}
-.detail-type-item-font{
-  display: inline-block;
-  vertical-align: middle;
-  margin-left: 10rpx;
-  color: #80bd01;
-  font-size: 28rpx;
-}
-.hot{
-  border: 1rpx solid red !important;
-  color: red !important;
+.sao {
+  width: 66rpx;
+  height: 66rpx;
 }
 
-.detail-post-header{
-  display: flex;
-  padding: 30rpx;
+.bian {
+  width: 40%;
+  border-bottom: 1rpx solid #999;
+  margin: 0 auto;
+  margin-top: 20rpx;
 }
-.detail-posts-tag{
-  display: inline-block;
-  width: 80rpx;
-  height: 42rpx;
+
+.bian input {
   text-align: center;
-  line-height: 42rpx;
-  margin-right: 10rpx;
-  font-size: 26rpx;
-  color: #80bd01;
-  border: 1rpx solid #80bd01;
-}
-.detail-post-title{
-  flex: 1;
-  font-size: 32rpx;
+  margin-bottom: 10rpx;
 }
 
-.detail-post-content{
-  overflow-x: hidden;
-  padding: 30rpx;
-}
-.content-info {
-  color: #6c6c6c;
-  word-wrap: break-word;
-}
-
-.detail-post-comment{
-  overflow: hidden;
-  border-top: 20rpx solid #eee;
-}
-
-.detail-post-comment-item{
-  display: flex;
-}
-.detail-post-comment-title{
-  position: relative;
-  line-height: 80rpx;
-  padding: 0 30rpx;
+.shu {
   font-size: 30rpx;
-  border-bottom: 1px #eee solid;
+  text-align: center;
+  font-family: '微软雅黑';
 }
 
-.detail-post-comment-avatar-img{
-  width: 80rpx;
-  height: 80rpx;
-  border-radius: 50%;
-}
-.detail-post-comment-cell{
-  overflow: hidden;
-  flex: 1;
-  margin-left: 20rpx;
-}
-.detail-post-comment {
-  background-color: #fff;
-}
-.detail-post-comment-item {
-  padding: 30rpx 0;
-  margin: 0 30rpx;
-  background: #fff;
-  border-bottom: 1px #eee solid;
+.lianxi {
+  position: fixed;
+  bottom: 0%;
+  width: 100%;
 }
 
-.detail-post-comment-info{
+.lianxi_a {
   display: flex;
-}
-.detail-post-comment-info-cell{
-  flex: 1;
-}
-.detail-post-zan{
-  width: 33rpx;
-  height: 33rpx;
-  display: inline-block;
-}
-.detail-post-zan-num{
-  display: inline-block;
-  margin-left: 10rpx;
-  color: #888;
-}
-
-.detail-post-comment-time{
-  font-size: 26rpx;
-  color: #666;
-}
-.detail-comment-content{
-}
-.detail-comment-text {
-  overflow: hidden;
-  display: block;
-  margin: 20rpx 0;
   font-size: 28rpx;
-  word-wrap: break-word;
+  width: 100%;
+  padding: 20rpx 0;
+}
+
+.lianxi text {
+  flex: 0.3;
 }
 
 
-.detail-post-comment-null{
-  margin: 50rpx auto;
+
+
+
+
+/*mask*/
+
+.drawer_screen {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  background: #000;
+  opacity: 0.5;
+  overflow: hidden;
+}
+
+/*content*/
+
+.drawer_box {
+  width: 100%;
+  overflow: hidden;
+  position: fixed;
+  top: 50%;
+  left: -1rpx;
+  z-index: 1001;
+  /*background: #;*/
+  margin: -150px 50rpx 0 0rpx;
+  border-radius: 3px;
+  font-family: '微软雅黑';
+  height:523rpx;
+
+
+}
+
+.drawer_title {
+  padding: 15px;
+  font: 35rpx ;
   text-align: center;
 }
-.detail-post-comment-null .imgnull{
-  margin: 5rpx auto;
-  width: 200rpx;
-  height: 200rpx;
+
+.drawer_content {
+  height: 210px;
+  overflow-y: scroll;
+  font-size: 30rpx;
+  margin: 0 52rpx;
 }
-.detail-post-comment-null .textnull{
-  display: block;
-  color: #80bd01;
+
+.drawer_content view {
+  padding: 10rpx 0;
+}
+
+.show-btn {
+  margin-top: 100rpx;
+  color: #22cc22;
+}
+
+.modal-mask {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #000;
+  opacity: 0.5;
+  overflow: hidden;
+  z-index: 9000;
+  color: #fff;
+}
+
+.modal-dialog {
+  width: 540rpx;
+  overflow: hidden;
+  position: fixed;
+  top: 50%;
+  left: 0;
+  z-index: 9999;
+  background: #f9f9f9;
+  margin: -180rpx 105rpx;
+  border-radius: 36rpx;
+}
+
+.modal-title {
+  padding-top: 50rpx;
+  font-size: 36rpx;
+  color: #030303;
+  text-align: center;
+}
+
+.modal-content {
+  padding: 50rpx 32rpx;
+}
+
+.modal-input {
+  display: flex;
+  background: #fff;
+  border: 2rpx solid #ddd;
+  border-radius: 4rpx;
+  font-size: 28rpx;
+}
+
+
+.input {
+  width: 100%;
+  height: 82rpx;
+  font-size: 28rpx;
+  line-height: 28rpx;
+  padding: 0 20rpx;
+  box-sizing: border-box;
+  color: #333;
+}
+
+input-holder {
+  color: #666;
+  font-size: 28rpx;
+}
+
+.modal-footer {
+  display: flex;
+  flex-direction: row;
+  height: 86rpx;
+  border-top: 1px solid #dedede;
+  font-size: 34rpx;
+  line-height: 86rpx;
+}
+
+.btn-cancel {
+  width: 50%;
+  color: #666;
+  text-align: center;
+  border-right: 1px solid #dedede;
+}
+
+.btn-confirm {
+  width: 50%;
+  color: #ec5300;
+  text-align: center;
+}
+
+.section{
+   background: #fff;
+   width:80%;
+   height: 100%;
+   margin: 0 auto;
+   text-align: center;
+   word-wrap:break-word;
+
 }
