--- a/Client/pages/index/index.wxss
+++ b/Client/pages/index/index.wxss
@@ -5,7 +5,7 @@
 .userinfo{
   position: relative;
   width: 750rpx;
-  height: 320rpx;
+  height: 330rpx;
   background: #444;
   color: #fff;
   display: flex;
@@ -30,15 +30,21 @@
   margin-top: 10rpx;
 }
 
-.about-item{
-  padding:10rpx 30rpx;
+.welcome-item{
+  padding:10rpx 15rpx;
 }
-.about-item-title{
+.welcome-item-title{
+  color: gray;
   display: block;
   font-size: 32rpx;
   line-height: 60rpx;
 }
-.about-item-content{
+.data-item-title{
+  display: block;
+  font-size: 32rpx;
+  line-height: 60rpx;
+}
+.welcome-item-content{
   margin-top: 10rpx;
   display: block;
   text-indent: 40rpx;
@@ -47,4 +53,34 @@
 .link{
   color: #80bd01;
   text-decoration: underline;
+}
+.table {
+  border: 1px solid gray;
+}
+.tr {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height: 2rem;
+  align-items: center;
+}
+.td {
+    width:40%;
+    justify-content: center;
+    text-align: center;
+}
+.bg-w{
+  background: snow;
+}
+.bg-g{
+  background: #E6F3F9;
+}
+.th {
+  width: 40%;
+  justify-content: center;
+  background: #6699CC;
+  color: #fff;
+  display: flex;
+  height: 2rem;
+  align-items: center;
 }
