--- a/Client/pages/index/index.wxml
+++ b/Client/pages/index/index.wxml
@@ -10,94 +10,46 @@
 </view> -->
 
 <view class="page me">
-<navigator url="/pages/login/login" wx:if="{{islogin == false}}">
-    <view class="userinfo">
+    <view class="userinfo" wx:if="{{islogin == false}}" data-type="login" bindtap="goUserInfo">
       <image class="userinfo-avatar" src="/images/icon/avatar.png" background-size="cover"></image>
       <text class="userinfo-nickname">点击登录</text>
       <view class="usermotto">
-        <text class="user-motto"></text>
+        <text class="user-motto">欢迎使用Collection</text>
       </view>
     </view>
-</navigator>
 
-<navigator url="/pages/login/login" wx:if="{{islogin == true}}">
-    <view class="userinfo">
+    <view class="userinfo" wx:if="{{islogin == true}}" data-type="userInfo" bindtap="goUserInfo">
       <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
       <text class="userinfo-nickname">{{myName}}</text>
       <view class="usermotto">
         <text class="user-motto">{{myCompany}}</text>
       </view>
     </view>
-</navigator>
 
-      <view class="view-cell view-cell-line">
-        <view class="view-cell-primary">
-          <image class="view-img"   mode="scaleToFill" src="/images/icon/login.png" />
-          <text class="view-name">登录 Collection</text>
-        </view>
-        <view class="view-cell-arrow"></view>
-      </view>
-      
+
+<view class="view-cell view-cell-line">
+  <view class="view-cell-primary" data-type="statistical" bindtap="goUserInfo">
+     <image class="view-img"   mode="scaleToFill" src="/images/icon/reply.png" />
+     <text class="view-name">数据统计</text>
+  </view>
+  <view class="view-cell-arrow"></view>
+</view>
+
+<view class="view-cell view-cell-line" data-type="setting" bindtap="goUserInfo">
+  <view class="view-cell-primary">
+    <image class="view-img"   mode="scaleToFill" src="/images/icon/settings.png" />
+    <text class="view-name">系统设置</text>
+  </view>
+  <view class="view-cell-arrow"></view>
+</view>
+
+<navigator url="/pages/about/about">
     <view class="view-cell view-cell-line">
       <view class="view-cell-primary">
-        <image class="view-img"   mode="scaleToFill" src="/images/icon/login.png" />
-        <text class="view-name">已登录 Collection</text>
+        <image class="view-img"   mode="scaleToFill" src="/images/icon/visit.png" />
+        <text class="view-name">关于我们</text>
       </view>
       <view class="view-cell-arrow"></view>
     </view>
-
-    <view class="welcome-item">
-        <view class="welcome-item">
-          <text class="data-item-title">当日数据：</text>
-        </view>
-        <view class="table">
-          <view class="tr bg-w">
-            <view class="th">    </view>
-            <view class="th">可回收物</view>
-            <view class="th">厨余垃圾</view>
-            <view class="th">有害垃圾</view>
-            <view class="th">其他垃圾</view>
-          </view>
-          <view class="tr bg-g" wx:if="{{index % 2 == 0}}">
-            <view class="td">数量</view>
-            <view class="td">{{todayData.recoverable}}</view>
-            <view class="td">{{todayData.harmful}}</view>
-            <view class="td">{{todayData.unrecoverable}}</view>
-            <view class="td">{{todayData.others}}</view>
-          </view>
-          <view class="tr" wx:else>
-            <view class="td">数量</view> 
-            <view class="td">{{todayData.recoverable}}</view>
-            <view class="td">{{todayData.harmful}}</view>
-            <view class="td">{{todayData.unrecoverable}}</view>
-            <view class="td">{{todayData.others}}</view>
-          </view>
-        </view>
-        <view class="welcome-item">
-          <text class="data-item-title">当月数据：</text>
-        </view>
-        <view class="table">
-          <view class="tr bg-w">
-            <view class="th">    </view>
-            <view class="th">可回收物</view>
-            <view class="th">厨余垃圾</view>
-            <view class="th">有害垃圾</view>
-            <view class="th">其他垃圾</view>
-          </view>
-          <view class="tr bg-g" wx:if="{{index % 2 == 0}}">
-            <view class="td">数量</view>
-            <view class="td">{{todayData.recoverable}}</view>
-            <view class="td">{{todayData.harmful}}</view>
-            <view class="td">{{todayData.unrecoverable}}</view>
-            <view class="td">{{todayData.others}}</view>
-          </view>
-          <view class="tr" wx:else>
-            <view class="td">数量</view> 
-            <view class="td">{{todayData.recoverable}}</view>
-            <view class="td">{{todayData.harmful}}</view>
-            <view class="td">{{todayData.unrecoverable}}</view>
-            <view class="td">{{todayData.others}}</view>
-          </view>
-        </view>
-    </view>
+</navigator>
 </view>
